k8s/applications/react-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: default
  labels:
    app: react-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: react-frontend
